разработка структуры страницы

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,4 @@
-.lc_BaseLayer {}
+.lc_FWOrdering {}
 
 /* ------------------------------------------------------------------------------------------------------------------ */
 .lc_VisArea {     /* Visualisation Area */
