--- a/css/b_ProductOptions.css
+++ b/css/b_ProductOptions.css
@@ -24,7 +24,7 @@
 #tab_1:checked  ~ #tab_l1,
 #tab_2:checked  ~ #tab_l2,
 #tab_3:checked  ~ #tab_l3 {
-   background: #fff;
+   background: #eee;
    border-color: #fff;
    top: 0;
    z-index: 3;}
@@ -38,10 +38,7 @@
 #b_ProductOptions .lc_WidgetsArea > div {
    position: absolute;
    top: 0;
-   opacity: 0;
-   -moz-transition: opacity 0.5s ease-in-out;
-   -webkit-transition: opacity 0.5s ease-in-out;
-   transition: opacity 0.5s ease-in-out;
+   display: none;
 }
 
 /* Родственные селекторы */
@@ -50,5 +47,5 @@
 #b_ProductOptions #tab_3:checked ~ .lc_WidgetsArea #tab_c3 {
    position: static;
    left: 0;
-   opacity: 1;
+   display: block;
 }
