--- a/css/w_DecorationOptions.css
+++ b/css/w_DecorationOptions.css
@@ -1,9 +1,10 @@
 .ac-container{
-   width: 400px;
+   width: 600px;
    margin: 10px auto 30px auto;
    text-align: left;
 }
 .ac-container label{
+   text-transform: uppercase; /* Заглавные буквы */
    font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
    padding: 5px 20px;
    position: relative;
