--- a/css/w_OptDecoration.css
+++ b/css/w_OptDecoration.css
@@ -85,11 +85,14 @@
    box-shadow: 0 0 0 1px rgba(155,155,155,0.3);
 }
 .ac-container input:checked ~ article.ac-small{
-   height: 140px;
+   /*height: 140px;*/
+   height: auto;
 }
 .ac-container input:checked ~ article.ac-medium{
-   height: 180px;
+   /*height: 180px;*/
+   height: auto;
 }
 .ac-container input:checked ~ article.ac-large{
-   height: 230px;
+   /*height: 230px;*/
+   height: auto;
 }
