--- a/css/w_OptDecoration.css
+++ b/css/w_OptDecoration.css
@@ -3,7 +3,7 @@
    margin: 10px auto 30px auto;
    text-align: left;
 }
-.ac-container label{
+.ac-container > div > label{
    text-transform: uppercase; /* Заглавные буквы */
    font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
    padding: 5px 20px;
@@ -29,11 +29,11 @@
    1px 0 0 0 rgba(255,255,255,0.9) inset,
    0 2px 2px rgba(0,0,0,0.1);
 }
-.ac-container label:hover{
+.ac-container > div > label:hover{
    background: #fff;
 }
-.ac-container input:checked + label,
-.ac-container input:checked + label:hover{
+.ac-container > div > input:checked + label,
+.ac-container > div > input:checked + label:hover{
    background: #c6e1ec;
    color: #3d7489;
    text-shadow: 0 1px 1px rgba(255,255,255, 0.6);
@@ -41,8 +41,8 @@
    0 0 0 1px rgba(155,155,155,0.3),
    0 2px 2px rgba(0,0,0,0.1);
 }
-.ac-container label:hover:after,
-.ac-container input:checked + label:hover:after{
+.ac-container > div > label:hover:after,
+.ac-container > div > input:checked + label:hover:after{
    content: '';
    position: absolute;
    width: 24px;
@@ -51,13 +51,13 @@
    top: 7px;
    background: transparent url(../img/icon/arrow_down.png) no-repeat center center;
 }
-.ac-container input:checked + label:hover:after{
+.ac-container > div > input:checked + label:hover:after{
    background-image: url(../img/icon/arrow_up.png);
 }
-.ac-container input{
+.ac-container > div > input{
    display: none;
 }
-.ac-container article{
+.ac-container  > div > article {
    background: rgba(255, 255, 255, 0.5);
    margin-top: -1px;
    overflow: hidden;
@@ -69,30 +69,22 @@
    -o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
    transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
 }
-.ac-container article p{
-   font-style: italic;
-   color: #777;
-   line-height: 23px;
-   font-size: 14px;
-   padding: 20px;
-   text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
-}
-.ac-container input:checked ~ article{
+.ac-container  > div > input:checked ~ article{
    -webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
    -moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
    -o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
    transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
    box-shadow: 0 0 0 1px rgba(155,155,155,0.3);
 }
-.ac-container input:checked ~ article.ac-small{
+.ac-container  > div > input:checked ~ article.ac-small{
    /*height: 140px;*/
    height: auto;
 }
-.ac-container input:checked ~ article.ac-medium{
+.ac-container  > div > input:checked ~ article.ac-medium{
    /*height: 180px;*/
    height: auto;
 }
-.ac-container input:checked ~ article.ac-large{
+.ac-container  > div > input:checked ~ article.ac-large{
    /*height: 230px;*/
    height: auto;
 }
