--- a/css/b_FrameSelect.css
+++ b/css/b_FrameSelect.css
@@ -28,22 +28,63 @@
 
 /* ------------------------------------------------------------------------------------------------------------------ */
 .lc_FrameList {
-   list-style-type: none;
-   margin: 0;
-   height: 100px;
-   overflow: auto;
+   height: 290px;
+}
+.lc_FrameList > div > div {
+   position: absolute;
+   display: inline-block;
+   height: 20px;
+   width: 140px;
+   text-align: center;
+   margin-top: 120px;    /* смещение на [ширину]-[высоту]/2 */
+   margin-left: 25px;    /* смещение на [ширину]-[необходимый отступ] */
+   transform: rotate(270deg);
+   transform-origin: bottom left;
+   text-transform: uppercase;
+   font: 14px bolder;
+}
+.lc_FrameList > div > ul {
+   position: relative;
+   display: block;
+   height: 130px;
+   margin: 0 0 0 30px;
+   padding: 5px;
    border: 2px solid darkgray;
+   overflow: auto;
+   list-style-type: none;
 }
-.lc_FrameList > li:nth-child(odd) {
-   background: left center #dfdfdf url("http://www.kirupa.com/images/blue_tongue_icon.png") no-repeat;
+
+.lc_FrameList > div#b_FrameTypeList > ul > li {
+   display: inline-table;
+   height: 40px;
 }
-.lc_FrameList > li:nth-child(even) {
-   background: left center #fff url("http://www.kirupa.com/images/gray_smiley.png") no-repeat;
+.lc_FrameList > div#b_FrameTypeList > ul > li:nth-child(odd) {
+   background: left center #dfdfdf;
 }
-.lc_FrameList > li > * {
-   display: inline;     /* возможно потребуется заменить на [inline-table] */
+.lc_FrameList > div#b_FrameTypeList > ul > li:nth-child(even) {
+   background: left center #fff;
 }
-.lc_FrameList > li > img {
+.lc_FrameList > div#b_FrameTypeList > ul > li > img {
+   display: table-cell;
+   margin-top: 4px;
    height: 32px;
+   width: 120px;
+}
+.lc_FrameList > div#b_FrameTypeList > ul > li > span {
+   display: table-cell;
+   vertical-align: middle;
+   margin: auto 3px;
+   width: 90px;
+}
+
+.lc_FrameList > div#b_FrameModelList > ul > li {
+   display: inline-block;     /* возможно потребуется заменить на [inline-table] */
+}
+.lc_FrameList > div#b_FrameModelList > ul > li > figure > p > img {
+   height: 64px;
    width: 100px;
+}
+.lc_FrameList > div#b_FrameModelList > ul > li > figure > figcaption {
+   font: 12px bolder;
+   text-align: center;
 }
