--- a/css/b_ProductOptions.css
+++ b/css/b_ProductOptions.css
@@ -27,7 +27,8 @@
    background: #eee;
    border-color: #fff;
    top: 0;
-   z-index: 3;}
+   z-index: 3;
+}
 
 #b_ProductOptions .lc_WidgetsArea {
    background: #fff;
