--- a/css/b_PaspSelect.css
+++ b/css/b_PaspSelect.css
@@ -1,3 +1,53 @@
 .lc_PaspSelect {
 
 }
+
+/* ------------------------------------------------------------------------------------------------------------------ */
+.lc_PaspListFS {
+   width: 190px;
+}
+.lc_PaspListFS > fieldset {
+   padding: 0;
+   font-size: 10pt;
+}
+.lc_PaspListFS > fieldset > div {
+   display: inline-block;
+   vertical-align: middle;
+   float: right;
+   font-size: 10pt;
+}
+.lc_PaspListFS > fieldset > div > select {
+   display: inline-block;
+   vertical-align: middle;
+   width: 110px;
+   font-size: 8pt;
+   text-align: center;
+}
+.lc_PaspListFS > fieldset > label#lblArtSearch {
+   display: inline-block;
+   vertical-align: middle;
+   font-size: 10pt;
+   margin-left: 10px;
+}
+.lc_PaspListFS > fieldset > input#txtArtSearch {
+   width: 100px;
+   display: inline-block;
+   vertical-align: middle;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------ */
+.lc_PaspList {
+
+}
+.lc_PaspList > ul {
+   padding: 5px;
+   border: 2px solid darkgray;
+   overflow: auto;
+   list-style-type: none;
+}
+.lc_PaspList > ul > li > img {
+   display: inline-block;
+   height: 32px;
+   width: 100px;
+   border: 1px solid black;
+}
