--- a/css/b_FrameSelect.css
+++ b/css/b_FrameSelect.css
@@ -50,7 +50,7 @@
    margin: 0 0 0 30px;
    padding: 5px;
    border: 2px solid darkgray;
-   overflow: auto;
+   overflow-y: auto;
    list-style-type: none;
 }
 
