--- a/css/b_PaspSelect.css
+++ b/css/b_PaspSelect.css
@@ -70,3 +70,122 @@
    font-size: 10pt;
 
 }
+
+/* ------------------------------------------------------------------------------------------------------------------ */
+.container {
+   /*width: 180px;*/
+   text-align: center;
+}
+.container .dropdown {
+   text-align: left;
+}
+
+.dropdown {
+   width: 200px;
+   position: relative;
+   height: 27px;
+   background: #363d47;
+   border: 1px solid;
+   border-color: #272c33 #242930 #22272d;
+   border-radius: 3px;
+   display: inline-block;
+   vertical-align: baseline;
+   zoom: 1;
+   *display: inline;
+   *vertical-align: auto;
+   background-image: -webkit-linear-gradient(top, #4a5361, #363d47);
+   background-image: -moz-linear-gradient(top, #4a5361, #363d47);
+   background-image: -o-linear-gradient(top, #4a5361, #363d47);
+   background-image: linear-gradient(to bottom, #4a5361, #363d47);
+   -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.15);
+   box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+.dropdown > label {
+   width: 140px;
+   float: left;
+   position: relative;
+   height: 27px;
+   line-height: 26px;
+   padding: 0 12px;
+   color: #ecf0f1;
+   border-radius: 2px 0 0 2px;
+   text-transform: uppercase;
+   font-size: 11px;
+   font-weight: bold;
+
+   text-shadow: 0 1px black;
+}
+.dropdown > label:before {
+   content: '';
+   display: inline-block;
+   vertical-align: -3px;
+   width: 25px;
+   height: 14px;
+   margin-right: 10px;
+   background: url("../img/icon/sel_pasp_layer.svg") 7px 0 no-repeat;
+
+}
+.dropdown > label:hover {
+   background: #3f4753;
+   background: rgba(255, 255, 255, 0.04);
+}
+.dropdown > label:active {
+   background: #343b44;
+}
+.dropdown div {
+   float: left;
+   height: 27px;
+   width: 26px;
+   background: url("../img/icon/toggle.png") 13px 9px no-repeat;
+   border-left: 1px solid #292e36;
+   border-color: rgba(0, 0, 0, 0.4);
+   -webkit-box-shadow: inset 1px 0 rgba(255, 255, 255, 0.08);
+   box-shadow: inset 1px 0 rgba(255, 255, 255, 0.08);
+}
+.dropdown div:hover {
+   -webkit-box-shadow: inset 1px 0 rgba(255, 255, 255, 0.04), inset 26px 26px rgba(0, 0, 0, 0.1);
+   box-shadow: inset 1px 0 rgba(255, 255, 255, 0.04), inset 26px 26px rgba(0, 0, 0, 0.1);
+}
+.dropdown div:hover ul {
+   display: block;
+}
+.dropdown ul {
+   display: none;
+   position: absolute;
+   top: 27px;
+   /*top: 10px;*/
+   left: 1px;
+   right: 1px;
+   background: #272c33;
+   border: 1px solid #20242a;
+   border-radius: 0 0 3px 3px;
+   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+.dropdown ul li {
+   display: block;
+}
+.dropdown ul li:last-child a {
+   border-radius: 0 0 3px 3px;
+}
+.dropdown ul a {
+   display: block;
+   line-height: 28px;
+   padding: 0 10px 1px;
+   color: #b2b8c4;
+   border-top: 1px solid transparent;
+
+   font-size: 12px;
+   text-decoration: none;
+   text-shadow: 0 1px black;
+}
+.dropdown ul a:hover {
+   color: white;
+   text-shadow: 0 1px rgba(0, 0, 0, 0.7);
+   background: #426ebf;
+   border-color: #78aad5;
+   background-image: -webkit-linear-gradient(top, #5e9ace, #416cb8);
+   background-image: -moz-linear-gradient(top, #5e9ace, #416cb8);
+   background-image: -o-linear-gradient(top, #5e9ace, #416cb8);
+   background-image: linear-gradient(to bottom, #5e9ace, #416cb8);
+}
