разработка структуры страницы

--- a/css/cw_OrderingStage.css
+++ b/css/cw_OrderingStage.css
@@ -1,7 +1,7 @@
 .lc_OrderingStage {
 
 }
-#cw_OrderingStage > fieldset {
+#cw_OrderingStage > section#l_SelectMeasurement > fieldset {
    display: inline-block;
    width: 150px;
 }
